// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF UYcZh"
      disabled={true}
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <div
        className="sc-MEQRl jkQqcM"
      >
        <input
          className="sc-dIZBxk kEeZkZ"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF UYcZh"
      disabled={true}
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <div
        className="sc-MEQRl jkQqcM"
      >
        <input
          className="sc-dIZBxk caNonq"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF UYcZh"
      disabled={true}
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk jJvQSg"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <div
        className="sc-MEQRl jkQqcM"
      >
        <input
          className="sc-dIZBxk cKxUP"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-fOpBKL eMFfDR"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <div
        className="sc-MEQRl jkQqcM"
      >
        <input
          className="sc-dIZBxk bwmQGU"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-fOpBKL eMFfDR"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk cNoMAK"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-fOpBKL eMFfDR"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <div
        className="sc-MEQRl jkQqcM"
      >
        <input
          className="sc-dIZBxk kEeZkZ"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <div
        className="sc-MEQRl jkQqcM"
      >
        <input
          className="sc-dIZBxk caNonq"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk jJvQSg"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <div
        className="sc-MEQRl jkQqcM"
      >
        <input
          className="sc-dIZBxk kEeZkZ"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <div
        className="sc-MEQRl jkQqcM"
      >
        <input
          className="sc-dIZBxk caNonq"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk jJvQSg"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <div
        className="sc-MEQRl jkQqcM"
      >
        <input
          className="sc-dIZBxk kEeZkZ"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <div
        className="sc-MEQRl jkQqcM"
      >
        <input
          className="sc-dIZBxk caNonq"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk jJvQSg"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
        dir="rtl"
      >
        medium
      </label>
      <div
        className="sc-MEQRl jkQqcM"
      >
        <input
          className="sc-dIZBxk kEeZkZ"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hkWWFD gmzOd"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
        dir="rtl"
      >
        large
      </label>
      <div
        className="sc-MEQRl jkQqcM"
      >
        <input
          className="sc-dIZBxk caNonq"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hkWWFD gmzOd"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk jJvQSg"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-khrHlC ckbtXb"
        >
          xlarge
        </label>
        <div
          className="sc-hkWWFD gmzOd"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl jkQqcM"
      >
        <input
          className="sc-dIZBxk kEeZkZ"
          placeholder="medium"
          type="password"
        />
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl jkQqcM"
      >
        <input
          className="sc-dIZBxk caNonq"
          placeholder="large"
          type="password"
        />
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl kBJTEJ"
      >
        <input
          className="sc-dIZBxk OQrHl"
          placeholder="xlarge"
          type="password"
        />
        <label
          className="sc-khrHlC jpbMtc"
        />
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        medium
      </label>
      <div
        className="sc-MEQRl jkQqcM"
      >
        <input
          className="sc-dIZBxk dndpqi"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <label
        className="sc-iKKmqK eRAvVB"
      >
        large
      </label>
      <div
        className="sc-MEQRl jkQqcM"
      >
        <input
          className="sc-dIZBxk LahlB"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-oTTbF eQlMmT"
    >
      <div
        className="sc-MEQRl cVOSay"
      >
        <input
          className="sc-dIZBxk jJvQSg"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-khrHlC jpbMtc"
        >
          xlarge
        </label>
        <div
          className="sc-hkWWFD dRPzvu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-fOpBKL ithMSx"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
